--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "tsx watch src/index.ts",
     "postinstall": "prisma generate",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.5",
