--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "postinstall": "prisma generate",
     "build": "tsc",
     "start": "node dist/index.js",
-    "seed": "tsx prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts",
+    "migrate": "npx prisma migrate dev",
+    "db:create": "prisma migrate dev --create-only",
+    "db:generate": "prisma generate",
+    "db:deploy": "prisma migrate deploy",
+    "db:status": "prisma migrate status"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.5",
