--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "template-hono",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch src/app.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/app.js",
     "db:seed": "tsx prisma/seed.ts",
     "db:create": "prisma migrate dev --create-only",
     "db:generate": "prisma generate",
@@ -13,16 +13,24 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.5",
+    "@hono/swagger-ui": "^0.5.2",
+    "@hono/zod-openapi": "^1.1.5",
     "@node-rs/bcrypt": "^1.10.7",
     "@prisma/client": "^6.18.0",
+    "@scalar/hono-api-reference": "^0.9.27",
+    "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "hono": "^4.10.3",
     "http-status-codes": "^2.3.0",
     "jose": "^6.1.2",
+    "kysely": "^0.28.8",
+    "pg": "^8.16.3",
+    "prisma-kysely": "^2.2.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "@types/pg": "^8.15.6",
     "prisma": "^6.18.0",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
